argocd/applications/continuwuity/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: "continuwuity"
    service: "continuwuity-app"
  name: "continuwuity-app"
  namespace: "continuwuity"

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: "continuwuity"
      service: "continuwuity-app"

  template:
    metadata:
      labels:
        app: "continuwuity"
        service: "continuwuity-app"
      name: "continuwuity-app"
      namespace: "continuwuity"

    spec:
      containers:
        - name: "continuwuity"
          # forgejo.ellis.link/continuwuation/continuwuity:v0.5.4-maxperf
          # linux/arm64
          #image: "forgejo.ellis.link/continuwuation/continuwuity@sha256:2ce664752f95279d84bcabe6ad6839e3252a5339d6290c16fcfb59dcf15e7d14"
          image: "forgejo.ellis.link/continuwuation/continuwuity:v0.5.4-maxperf"
          imagePullPolicy: "IfNotPresent"

          ports:
            - name: "app"
              containerPort: 3000

          resources:
            requests:
              cpu: "200m"
              memory: "100Mi"

          volumeMounts:
            - name: "app-data"
              mountPath: "/var/lib/conduwuit"
            - name: "app-backup"
              mountPath: "/opt/continuwuity-db-backups"

      imagePullSecrets:
        - name: "dockerhub-tlake-read-only"

      volumes:
        - name: "app-data"
          persistentVolumeClaim:
            claimName: "app-data"
        - name: "app-backup"
          persistentVolumeClaim:
            claimName: "app-backup"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: "continuwuity"
    service: "continuwuity-app"
  name: "continuwuity-app"
  namespace: "continuwuity"

spec:
  ports:
    - name: "http-traffic"
      port: 80
      targetPort: "app"

  selector:
    app: "continuwuity"
    service: "continuwuity-app"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "continuwuity"
    service: "continuwuity-app"
  name: "continuwuity-web"
  namespace: "continuwuity"

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`matrix.tlake.io`)
      kind: Rule
      services:
        - name: "continuwuity-app"
          port: "http-traffic"

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app: "continuwuity"
    service: "continuwuity-app"
  name: "continuwuity-websecure"
  namespace: "continuwuity"

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`matrix.tlake.io`)
      kind: Rule
      services:
        - name: "continuwuity-app"
          port: "http-traffic"

  tls:
    certResolver: "staging"
